plugins {
    id 'com.android.application'
}

android {
    compileSdk 33
    namespace "com.gt.launcher"

    defaultConfig {
        applicationId "com.gt.launcher"
        minSdk 21
        targetSdk 33
        versionCode 10
        versionName "0.1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        ndk {
            //noinspection ChromeOsAbiSupport
            abiFilters 'armeabi-v7a', 'arm64-v8a'
        }

        externalNativeBuild {
            cmake {
                arguments '-DANDROID_STL=c++_shared'
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    externalNativeBuild {
        cmake {
            path file('src/main/cpp/CMakeLists.txt')
        }
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'

    implementation 'androidx.appcompat:appcompat:1.5.1'

    // Needed by Growtopia
    implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
    implementation 'com.appsflyer:af-android-sdk:6.9.4'
    implementation 'com.android.installreferrer:installreferrer:2.2'
    implementation 'com.miui.referrer:homereferrer:1.0.0.6'
    implementation 'com.android.billingclient:billing:5.1.0'
    implementation 'com.google.android.gms:play-services-base:18.1.0'
    implementation 'com.tapjoy:tapjoy-android-sdk:12.10.0'
}
